  * comments: The formats allowed to be used in comments can be configured
    using comments_allowformats.
    Thanks, Michal Sojka
  * calendar: When there are multiple pages for a given day, they're
    displayed in a popup on mouseover.
    Thanks, Louis
  * osm: Remove trailing slash from KML maps icon.
  * page.tmpl: omit searchform, trails, sidebar and most metadata in CGI
    (smcv)

 -- Joey Hess <joeyh@debian.org>  Sun, 23 Jun 2013 14:02:01 -0400

ikiwiki (3.20130518) unstable; urgency=low

  * Fix test suite to not fail when XML::Twig is not installed.
    Closes: #707436
  * theme: Now <TMPL_IF THEME_$NAME> can be used in all templates when
    a theme is enabled.
  * notifyemail: Fix bug that caused duplicate emails to be sent when
    site was rebuilt.
  * bzr: bzr rm no longer has a --force option, remove

 -- Joey Hess <joeyh@debian.org>  Sat, 18 May 2013 16:28:21 -0400

ikiwiki (3.20130504) unstable; urgency=low

  * Allow dots in directive parameter names. (tango)
  * Add missing plugin section, and deal with missing sections with a warning.
  * Detect plugins with a broken getsetup and warn.
  * map: Correct reversion introduced in version 3.20110225 that could
    generate invalid html. (smcv)
  * Makefile.PL: overwrite theme style.css instead of appending
    (Thanks, Mikko Rapeli)
  * meta: Fix anchors used to link to the page's license and copyright.
    Closes: #706437

 -- Joey Hess <joeyh@debian.org>  Sat, 04 May 2013 23:47:21 -0400

ikiwiki (3.20130212) unstable; urgency=low

  * htmlscrubber: Allow the bitcoin URI scheme.
  * htmlscrubber: Allow the URI schemes of major VCS's.
  * aggregate: When run with --aggregate, if an aggregation is already
    running, don't go on and --refresh.
  * trail: Avoid excess dependencies between pages in the trail
    and the page defining the trail. Thanks, smcv.
  * opendiscussion: Don't allow editing discussion pages if discussion pages
    are disabled. (smcv)