@@ -11,6 +11,8 @@ ikiwiki (3.20130519) UNRELEASED; urgency=low
   * osm: Remove trailing slash from KML maps icon.
   * page.tmpl: omit searchform, trails, sidebar and most metadata in CGI
     (smcv)
+  * openid: Automatically upgrade openid_realm to https when
+    accessed via https.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 23 Jun 2013 14:02:01 -0400
 
